--- a/lib/intl/intl_en.arb
+++ b/lib/intl/intl_en.arb
@@ -1,3 +1,12 @@
 {
-  "signUpTitle": "Sign up for TikTok"
+  "signUpTitle": "Sign up for {nameOfTheApp}",
+  "@signUpTitle": {
+    "description": "The title people see when they open the app for the first time.",
+    "placeholder": {
+      "nameOfTheApp": {
+        "type": "String",
+        "example": "TikTok"
+      }
+    }
+  }
 }
