--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,8 +1,12 @@
 {
+  "@@locale": "ko",
   "signUpTitle": "{nameOfTheApp}에 가입하세요",
   "signUpSubtitle": "Create a profile, follow other accounts, make your own videos, and more.",
   "emailPasswordButton": "Use email & password",
   "appleButton": "Continue with Apple",
   "alreadyHaveAnAccount": "Already have an account?",
-  "logIn": "Log in"
+  "logIn": "Log in",
+  "likeCount": "{value}",
+  "commentCount": "{value}",
+  "commentAppBarTitle": "{value} {value2, plural, =1{comment} other{comments}}"
 }
