--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,12 +1,17 @@
 {
   "@@locale": "en",
-  "signUpTitle": "Sign up for {nameOfTheApp}",
+  "signUpTitle": "Sign up for {nameOfTheApp} {when}",
   "@signUpTitle": {
     "description": "The title people see when they open the app for the first time.",
     "placeholders": {
       "nameOfTheApp": {
         "type": "String",
         "example": "TikTok"
+      },
+      "when": {
+        "type": "DateTime",
+        "format": "yQQQQ / LLLL : Hm",
+        "isCustomDateFormat": "true"
       }
     }
   },
