TikTok Clone: NAVIGATOR V1-await Navigator.push()

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,17 +1,12 @@
 {
   "@@locale": "en",
-  "signUpTitle": "Sign up for {nameOfTheApp} {when}",
+  "signUpTitle": "Sign up for {nameOfTheApp}",
   "@signUpTitle": {
     "description": "The title people see when they open the app for the first time.",
     "placeholders": {
       "nameOfTheApp": {
         "type": "String",
         "example": "TikTok"
-      },
-      "when": {
-        "type": "DateTime",
-        "format": "yQQQQ / LLLL : Hm",
-        "isCustomDateFormat": "true"
       }
     }
   },
@@ -29,7 +24,7 @@
   "emailPasswordButton": "Use email & password",
   "appleButton": "Continue with Apple",
   "alreadyHaveAnAccount": "Already have an account?",
-  "logIn": "Log in {gender, select, male{sir} female{madam} other{human}}",
+  "logIn": "Log in",
   "likeCount": "{value}",
   "@likeCount": {
     "description": "Anything you want",
